# cmake-package-builder

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: build.yml  package.yml
cmake/: CMakeCore.cmake  Core.cmake  PackageBuilder.cmake
cmake/NSIS/: NSIS.template.in
docs/: Doxyfile.in
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
test_package/src/: main.cpp
